cabal-version:       2.2

name:                layer3-code-sample
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ethan Jones
maintainer:          joneetha@oregonstate.edu
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     BinaryTree, Ipv4, MaxContSum
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
